RISDEV-9029: Administrative directive xslt transformation (#1356)
### This PR:
- implements the xslt transformation for administrative directives

---------

Co-authored-by: UrsKahmann <urs.kahmann@digitalservice.bund.de>