@@ -6,6 +6,7 @@ import de.bund.digitalservice.ris.search.service.xslt.LiteratureXsltTransformerS
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Objects;
 import org.jsoup.Jsoup;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -19,28 +20,29 @@ class LiteratureXsltTransformerServiceTest {
 
   LiteratureXsltTransformerServiceTest() throws IOException {}
 
-  @ParameterizedTest(name = "{2}")
+  @ParameterizedTest(name = "{1}")
   @CsvSource(
       value = {
-        "uli/example1/literature.xml  | uli/example1/literature.html  | Transforms literature with mainTitle, alternativeHeadline, outline and mainBody",
-        "uli/example2/literature.xml  | uli/example2/literature.html  | Transforms literature with only alternativeHeadline and mainBody",
-        "uli/example3/literature.xml  | uli/example3/literature.html  | Transforms literature with only mainTitle and outline",
-        "uli/example4/literature.xml  | uli/example4/literature.html  | Transforms literature with mainTitle, alternativeHeadline and mainTitleAdditions",
-        "uli/example5/literature.xml  | uli/example5/literature.html  | Transforms literature with alternativeHeadline and mainTitleAdditions",
-        "uli/example6/literature.xml  | uli/example6/literature.html  | Transforms literature with mainTitleAdditions",
-        "uli/example7/literature.xml  | uli/example7/literature.html  | Transforms literature with mainTitle and mainTitleAdditions",
-        "uli/example8/literature.xml  | uli/example8/literature.html  | Transforms literature with active citations",
-        "uli/example9/literature.xml  | uli/example9/literature.html  | Transforms literature with passive citations",
-        "uli/example10/literature.xml | uli/example10/literature.html | Transforms literature with active and passive citations",
+        "uli/example1  | transforms mainTitle, alternativeHeadline, outline and mainBody",
+        "uli/example2  | transforms only alternativeHeadline and mainBody",
+        "uli/example3  | transforms only mainTitle and outline",
+        "uli/example4  | transforms mainTitle, alternativeHeadline and mainTitleAdditions",
+        "uli/example5  | transforms alternativeHeadline and mainTitleAdditions",
+        "uli/example6  | transforms mainTitleAdditions",
+        "uli/example7  | transforms mainTitle and mainTitleAdditions",
+        "uli/example8  | transforms active citations",
+        "uli/example9  | transforms passive citations",
+        "uli/example10 | transforms active and passive citations",
       },
       delimiter = '|')
-  void testTransformLiteratureXmlDocuments(
-      String inputFileName, String expectedFileName, String testName) throws IOException {
-    byte[] bytes = Files.readAllBytes(Path.of(resourcesBasePath, inputFileName));
+  void testTransformLiteratureXmlDocuments(String testfileDir, String testName) throws IOException {
+    Path inputFilePath = Paths.get(resourcesBasePath, testfileDir, "literature.xml");
+    Path expectedFilePath = Paths.get(resourcesBasePath, testfileDir, "literature.html");
 
+    byte[] bytes = Files.readAllBytes(inputFilePath);
     var result = service.transformLiterature(bytes);
 
-    var expectedHtml = Files.readString(Path.of(resourcesBasePath, expectedFileName));
+    var expectedHtml = Files.readString(expectedFilePath);
     var expectedDocument = Jsoup.parse(expectedHtml);
     var actualDocument = Jsoup.parse(result);
     assertThat(actualDocument.html()).isEqualTo(expectedDocument.html());
